Fixed navbar on small and smaller screens - larger text & outline

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,22 @@ body {
 
 .navbar {
     background-color: black;
+    }
+
+.navbar {
+    li {
+        font-family: 'Tenby-Six', 'Arial Narrow', Arial, sans-serif;
+    }
+}
+
+@media (max-width: 576px) {
+    nav {
+        li {
+            text-align: center;
+            font-size: 2rem;
+            outline: 1px solid white;
+        }
+    }
 }
 
 #hero{
@@ -23,13 +39,8 @@ body {
     background-image: linear-gradient(225deg, rgba(45, 54, 83, .7), rgba(51, 51, 77, .1)), url(/img/HexPattern.png);
 }
 
-#storelinks {
-    max-height: 400px;
-    
-    img{
-        max-height: 200px;
-        max-width: 100%;
-    }
+#storeLinks {
+    max-height: 60rem;
 }
 
 h1 {
@@ -54,10 +65,6 @@ h1 {
 
 .dropShadow {
     box-shadow: 4px 4px 8px black;
-}
-
-.tenby-six {
-    font-family: 'Tenby-Six', 'Arial Narrow', Arial, sans-serif;
 }
 
 .carousel {
